tests/corpus/pass/lexparse/020_nil.gw
fn t() -> u0 { let n = nil; }
