tests/corpus/fail/lexparse/f05_invalid_expr.gw
fn t() -> u0 { let x = ; }
